fix: announcement banner has left and right border on mobile

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -246,7 +246,8 @@ textarea
   z-index: 100
 
   @media screen and (max-width: $break-medium)
-    border: 0
+    border-top: 0
+    border-bottom: 0
 
   .announcement-message-text
     text-align: center
